fix: correcao na logica de bibliotecario admin
